[project]
name = "pyth-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan K", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "clickhouse-connect>=0.7.18",
    "polars>=1.5.0",
    "pyarrow>=17.0.0",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.5.1",
    "python-dotenv>=1.0.1",
    "flipside>=2.0.8",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyth_analysis"]
